tests/models/enum/named/string/fail/max_items.stderr
error: Support condition is min_length, max_length, alias, default and validate
 --> tests/models/enum/named/string/fail/max_items.rs:6:9
  |
6 |         value: String
  |         ^^^^^
